--- a/.github/workflows/XMU_Auto_Check_In.yml
+++ b/.github/workflows/XMU_Auto_Check_In.yml
@@ -9,6 +9,9 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '30 0 * * *'
+    - cron: '30 4 * * *'
+    - cron: '30 8 * * *'
+    - cron: '30 12 * * *'
     # cron表达式，Actions时区是UTC时间，北京时间要往前推8个小时。
     # 第一位30指代分钟，第二位0指代小时，24小时制，这个设置即为北京时间8：30
 
